# ChangeLog for net-misc/gwibber
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/gwibber/ChangeLog,v 1.8 2010/03/15 02:40:52 neurogeek Exp $

*gwibber-2.29.92.1 (15 Mar 2010)

  15 Mar 2010; Jesus Rivero <neurogeek@gentoo.org>
  +gwibber-2.29.92.1.ebuild:
  Version bump. Closes bug #304341

  15 Mar 2010; Jesus Rivero <neurogeek@gentoo.org> -gwibber-0.7.ebuild:
  Removed older version.

  06 Feb 2010; Peter Volkov <pva@gentoo.org> gwibber-1.2.0_pre340.ebuild:
  Added missed inherit eutils, bug #303709, thank Dan W. for report.

  07 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  gwibber-1.2.0_pre340.ebuild:
  Keywording for ppc

  27 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  gwibber-1.2.0_pre340.ebuild:
  All the python extensions are needed at runtime too.

*gwibber-1.2.0_pre340 (13 Jul 2009)

  13 Jul 2009; Jesus Rivero <neurogeek@gentoo.org>
  +files/gwibber-prefix.patch, +gwibber-1.2.0_pre340.ebuild:
  Version bump

  20 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gwibber-0.7.ebuild:
  Fix dependencies (bug #255975).

  14 Mar 2009; Jesus Rivero <neurogeek@gentoo.org> +metadata.xml,
  +gwibber-0.7.ebuild:
  Package move from dev-python/gwibber to net-misc.

  15 Dec 2008; Jesus Rivero <neurogeek@gentoo.org> gwibber-0.7.ebuild:
  Added missing rdep

*gwibber-0.7 (07 Dec 2008)

  07 Dec 2008; Jesus Rivero <neurogeek@gentoo.org> +metadata.xml,
  +gwibber-0.7.ebuild:
  Initial commit. Proxy mantained by me for Sergio Rodriguez
  <srinclan@gmail.com>
