@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/gwibber
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gwibber/ChangeLog,v 1.8 2010/03/15 02:40:52 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gwibber/ChangeLog,v 1.9 2010/11/01 01:21:25 hwoarang Exp $
+
+*gwibber-2.32.0.2 (01 Nov 2010)
+
+  01 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
+  +gwibber-2.32.0.2.ebuild:
+  Non-maintainer version bump. Bug #327797
 
 *gwibber-2.29.92.1 (15 Mar 2010)
 
